--- a/Education App/HTML/index.html
+++ b/Education App/HTML/index.html
@@ -13,28 +13,162 @@ a:active { color:#666600; }
    <TITLE>On Second Thought</TITLE>
 </HEAD>
 <BODY>
-
-<IMG SRC="ChalkboardDesign.001.jpg">
+The following Images were taken directly out of the game running on an iPad (in this case the iPad Simulator).  Below each image is a text description about what you are seeing.
+<IMG SRC="loading.png">
 <BR>
-<IMG SRC="ChalkboardDesign.002.jpg">
+This is the startup screen.  I'm working on a new version with the Roller coaster inlace of this, but it's not in the actual game yet.
 <BR>
-<IMG SRC="ChalkboardDesign.003.jpg">
+<IMG SRC="mainmenu.png">
 <BR>
-<IMG SRC="ChalkboardDesign.004.jpg">
+This is the main menu.  You can access Settings and a Chapter select from the icons at the top.  The Play button at the bottom will start at Activity 1.
 <BR>
-<IMG SRC="ChalkboardDesign.005.jpg">
+<IMG SRC="chapterselect.png">
 <BR>
-<IMG SRC="ChalkboardDesign.006.jpg">
+This is where you can select a chapter, the list scrolls to the left and right.<BR>
+<IMG SRC="introtextpage1.png">
 <BR>
-<IMG SRC="ChalkboardDesign.007.jpg">
+This is the first page of Introduction text.  There is an intro page before each Activity.<BR>
+<IMG SRC="introtextpage2.png">
 <BR>
-<IMG SRC="ChalkboardDesign.008.jpg">
+This is the 2nd intro page, this is where the large graphic is going (that's why it is blank, the graphics haven't been added to the game yet).<BR>
+<IMG SRC="activity1_1.png">
 <BR>
-<IMG SRC="ChalkboardDesign.009.jpg">
+This is the first question in Activity 1.  You drag the right emotion to the right character.  The characters come in from the left and right into position.  It will play a Firework particle when you get one right.<BR>
+<IMG SRC="activity1_next.png">
 <BR>
-<IMG SRC="ChalkboardDesign.010.jpg">
-
-
-
+Once you get all the questions right, a Next button appears.  When you get a question wrong, the character will shake, and the choice you selected will return to it's original location on the board.<BR>
+<IMG SRC="activity1_2.png">
+<BR>
+This is the 2nd Question on activity 1.<BR>
+<IMG SRC="fireworks.png">
+<BR>
+The fire work particles in action.  It's hard to grab a screenshot.  Please not, it's not a final design, just a test particle to make sure it works.<BR>
+<IMG SRC="activity1_3.png">
+<BR>
+The 3rd question in Activity 1.
+<BR>
+<IMG SRC="activity1_4.png">
+<BR>
+The 4th question in Activity 1.
+<BR>
+<IMG SRC="activity1_5.png">
+<BR>
+The 5th question in Activity 1.
+<BR>
+<IMG SRC="activity1_6.png">
+<BR>
+The 6th question in Activity 1, transforms into a sentence with the feelings surrounding it.
+<BR>
+<IMG SRC="activity1_7.png">
+<BR>
+The 7th question in Activity 1.
+<BR>
+<IMG SRC="activity1_8.png">
+<BR>
+The 8th question in Activity 1.
+<BR>
+<IMG SRC="activity1_9.png">
+<BR>
+The 9th question in Activity 1.
+<BR>
+<IMG SRC="activity1_10.png">
+<BR>
+The 10th question in Activity 1.
+<BR>
+<IMG SRC="activity1_11.png">
+<BR>
+The 11th question in Activity 1.
+<BR>
+<IMG SRC="activity1_12.png">
+<BR>
+The 12th question in Activity 1.
+<BR>
+<IMG SRC="activity1_13.png">
+<BR>
+The 13th question in Activity 1.
+<BR>
+<IMG SRC="activity1_14.png">
+<BR>
+The 14th question in Activity 1.
+<BR>
+<IMG SRC="activity1_15.png">
+<BR>
+The 15th question in Activity 1.
+<BR>
+<IMG SRC="activity1_16.png">
+<BR>
+The 16th question in Activity 1.
+<BR>
+<IMG SRC="activity2.png">
+<BR>
+This is Activity 2.  Right now it's just using assets from Activity 1, as I get the positions correct.  Then I will put in the Activity 2 Assets.  The activity will list 5 questions on the Left, and 5 answers on the right, and you have to match them in the right order.  Again, pay no attention to the actual images in this, it's all about making the logic work.
+<BR>
+<IMG SRC="activity3intro.png">
+<BR>
+Introduction text for Activity 3.  Just like all activities, it will be followed by an image.
+<BR>
+<IMG SRC="activity3_1.png">
+<BR>
+The 1st question for Activity 3.
+<BR>
+<IMG SRC="activity3_2.png">
+<BR>
+The 2nd question for Activity 3.
+<BR>
+<IMG SRC="activity3_3.png">
+<BR>
+The 3rd question for Activity 3.
+<BR>
+<IMG SRC="activity3_4.png">
+<BR>
+The 4th question for Activity 3.
+<BR>
+<IMG SRC="activity3_5.png">
+<BR>
+The 5th question for Activity 3.
+<BR>
+<IMG SRC="activity4intro.png">
+<BR>
+Introduction screen for Activity 4.  Will be followed by a 2nd screen with an image.
+<BR>
+<IMG SRC="actvity4_1.png">
+<BR>
+The 1st question for Activity 4.  It builds out boxes to place the individual words (or groups of words if needed) into each box.  The scaling needs to be adjusted.
+<BR>
+<IMG SRC="activity4_1complete.png">
+<BR>
+This is what a completed question in Activity 4 looks like.
+<BR>
+<IMG SRC="activity4_2.png">
+<BR>
+Working on the spacing, and selections in Activity 4.  It is ready now for the actual game data.
+<BR>
+<IMG SRC="activity5_1.png">
+<BR>
+This is the 5th activity (and it has an intro with an image first).  Different phrases/words go in the shapes.  Tap on one and it starts to pulse, tap on the right 2nd one and they complete.
+<BR>
+<IMG SRC="activity5_1match.png">
+<BR>
+Two matched items for the 5th activity.  When matched the circles fill in with a color.
+<BR>
+<IMG SRC="activity5_1complete.png">
+<BR>
+A completed Activity 5.
+<BR>
+These Next Images, are being implemented, these are the sketches of how they should work in game.
+<IMG SRC="Mode4.002.jpg">
+<BR>
+This is the first version of the Question and Answer mode.  This puts an question in the center, and images with captions around it.
+<BR>
+<IMG SRC="Mode4.005.jpg">
+<BR>
+This version of the Question and Answer mode will have single question question in text, and several answers around it.  This will power the final activity.
+<BR>
+<IMG SRC="Mode4.009.jpg">
+<BR>
+This mode, presents a question with an image and a caption in the center of the screen and several possible answers around it.  Correct answers highlight green, incorrect answers turn red.  It takes 5 correct answers to correctly complete this activity.
+<BR>
+<BR>
+The only remaining Activity not present in this list, is the "Slide Show" activity, where it presents an image and text, and a Next Button.  That is going into the program last.
 </BODY>
 </HTML>
